# mult_grad_population_calibration

./: .gitattributes  .gitignore  README.md  example_1d_mixture.py  example_hsp90.py  my_style.mplstyle  pyproject.toml
notebooks/: 1d_gaussian_example.ipynb  2025_08_13_check_new_gaps.ipynb  hsp90_example.ipynb  new_hsp90.ipynb  paper_hsp90_example.ipynb  paper_igg_example_2d.ipynb  paper_igg_example_4d.ipynb  paper_igg_example_volumes.ipynb
src/mult_grad_population_calibration/: optimize_weights.py  utils.py
src/parsimonious_ensembles/: optimize_weights.py  utils.py
tests/: test_grad_log_prob.py  test_mult_grad.py
