[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/mult_grad_population_calibration",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/mult_grad_population_calibration",
]
[project]
authors = [
   { name = "Luke Evans", email = "levans@flatironinstitute.org"}
]
name = "mult_grad_population_calibration"
version = "0.0.2"
dependencies = [
    "jaxopt",
    "numpy",
    "numpyro",
    "equinox",
    "logging",
    "jax_dataloader",
    "matplotlib",
    "pytest"
]